[package]
name = "synthehol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
url = "2.5.2"
hyper-util = { version = "0.1.9", features = ["client-legacy"] }
async-trait = "0.1.83"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rusqlite = { version = "0.32.0", features = ["bundled"] }
upon = "0.8.1"
reqwest = { version = "0.12.8", features = ["json"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
serde_json = "1.0.132"
